force-app/main/default/objects/Ordered_Product__c/Ordered_Product__c.object-meta.xml
<CustomObject>
    <label>Ordered Product</label>
    <nameField>
        <label>Item Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordered Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>