force-app/main/default/objects/Ordered_Product__c/fields/Arriving_Date__c.field-meta.xml
<CustomField>
    <fullName>Arriving_Date__c</fullName>
    <label>Arriving Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>