force-app/main/default/objects/Ordered_Product__c/fields/Bulk_Discount__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Discount__c</fullName>
    <label>Bulk Discount</label>
    <length>200</length>
    <type>Text</type>
</CustomField>