force-app/main/default/objects/Ordered_Product__c/fields/CodCharge__c.field-meta.xml
<CustomField>
    <fullName>CodCharge__c</fullName>
    <label>COD - Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>