force-app/main/default/objects/Ordered_Product__c/fields/Coupon_Discount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount__c</fullName>
    <label>Promotional Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>