force-app/main/default/objects/Ordered_Product__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <formula>Order_Information__r.CustomerName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerName</label>
    <type>Text</type>
</CustomField>