force-app/main/default/objects/Ordered_Product__c/fields/Distributor_allocated__c.field-meta.xml
<CustomField>
    <fullName>Distributor_allocated__c</fullName>
    <label>Distributor allocated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>