force-app/main/default/objects/Ordered_Product__c/fields/DP__c.field-meta.xml
<CustomField>
    <fullName>DP__c</fullName>
    <label>DP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>