force-app/main/default/objects/Ordered_Product__c/fields/Ecom_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Campaign__c</fullName>
    <formula>Order_Information__r.Customer_Contact__r.Ecom_campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecom Campaign</label>
    <type>Text</type>
</CustomField>