force-app/main/default/objects/Ordered_Product__c/fields/Ecom_Content__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Content__c</fullName>
    <formula>Order_Information__r.Customer_Contact__r.Ecom_content__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecom Content</label>
    <type>Text</type>
</CustomField>