force-app/main/default/objects/Ordered_Product__c/fields/Ecom_Media__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Media__c</fullName>
    <formula>Order_Information__r.Customer_Contact__r.Ecom_media__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecom Media</label>
    <type>Text</type>
</CustomField>