force-app/main/default/objects/Ordered_Product__c/fields/Ecom_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Order_Number__c</fullName>
    <formula>Order_Information__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecom Order Number</label>
    <type>Text</type>
</CustomField>