force-app/main/default/objects/Ordered_Product__c/fields/Ecom_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Order_Status__c</fullName>
    <formula>Order_Information__r.Payment_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecom Order Status</label>
    <type>Text</type>
</CustomField>