force-app/main/default/objects/Ordered_Product__c/fields/Ecom_Source__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Source__c</fullName>
    <formula>Order_Information__r.Customer_Contact__r.Ecom_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecom Source</label>
    <type>Text</type>
</CustomField>