force-app/main/default/objects/Ordered_Product__c/fields/Ecom_Term__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Term__c</fullName>
    <formula>Order_Information__r.Customer_Contact__r.Ecom_term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecom Term</label>
    <type>Text</type>
</CustomField>