force-app/main/default/objects/Ordered_Product__c/fields/Eligible_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Distributor__c</fullName>
    <formula>Order_Information__r.Eligible_Distributor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible Distributor</label>
    <type>Text</type>
</CustomField>