force-app/main/default/objects/Ordered_Product__c/fields/Flag_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Flag_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag-Delivered</label>
    <type>Checkbox</type>
</CustomField>