force-app/main/default/objects/Ordered_Product__c/fields/Flag_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Flag_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag-Shipped</label>
    <type>Checkbox</type>
</CustomField>