force-app/main/default/objects/Ordered_Product__c/fields/IB_Number_SKU__c.field-meta.xml
<CustomField>
    <fullName>IB_Number_SKU__c</fullName>
    <formula>SKU__c+&apos;|&apos;+Order_Information__r.Order_Number__c</formula>
    <label>UID</label>
    <type>Text</type>
</CustomField>