force-app/main/default/objects/Ordered_Product__c/fields/image_url__c.field-meta.xml
<CustomField>
    <fullName>image_url__c</fullName>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>