force-app/main/default/objects/Ordered_Product__c/fields/Intro_Discount__c.field-meta.xml
<CustomField>
    <fullName>Intro_Discount__c</fullName>
    <label>Intro Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>