force-app/main/default/objects/Ordered_Product__c/fields/Lt_Cash__c.field-meta.xml
<CustomField>
    <fullName>Lt_Cash__c</fullName>
    <label>Lt Cash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>