force-app/main/default/objects/Ordered_Product__c/fields/MRP_Value__c.field-meta.xml
<CustomField>
    <fullName>MRP_Value__c</fullName>
    <formula>VALUE( Tax_Inclusive_Price__c)  *  VALUE( Quanitity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRP Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>