force-app/main/default/objects/Ordered_Product__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <formula>TEXT(Order_Information__r.Customer_Contact__r.Number_of_Employees_Custom__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Employees</label>
    <type>Text</type>
</CustomField>