force-app/main/default/objects/Ordered_Product__c/fields/Order_Information__c.field-meta.xml
<CustomField>
    <fullName>Order_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Information</label>
    <referenceTo>Order_Information__c</referenceTo>
    <relationshipLabel>Ordered Products</relationshipLabel>
    <relationshipName>Ordered_Products</relationshipName>
    <type>Lookup</type>
</CustomField>