force-app/main/default/objects/Ordered_Product__c/fields/Product_Pic__c.field-meta.xml
<CustomField>
    <fullName>Product_Pic__c</fullName>
    <formula>IMAGE( image_url__c , &apos;test&apos;,150,178)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Pic</label>
    <type>Text</type>
</CustomField>