force-app/main/default/objects/Ordered_Product__c/fields/Project_S_No__c.field-meta.xml
<CustomField>
    <fullName>Project_S_No__c</fullName>
    <formula>Order_Information__r.Project__r.Project_S_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project S. No</label>
    <type>Text</type>
</CustomField>