force-app/main/default/objects/Ordered_Product__c/fields/Quanitity__c.field-meta.xml
<CustomField>
    <fullName>Quanitity__c</fullName>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>