force-app/main/default/objects/Ordered_Product__c/fields/Reasons_for_ADR__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_ADR__c</fullName>
    <label>Reasons for ADR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>