force-app/main/default/objects/Ordered_Product__c/fields/Recommendation_type__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_type__c</fullName>
    <description>recommendation_type if order comes through recommendated products.</description>
    <label>Recommendation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>