force-app/main/default/objects/Ordered_Product__c/fields/Role_in_organization__c.field-meta.xml
<CustomField>
    <fullName>Role_in_organization__c</fullName>
    <formula>Order_Information__r.Customer_Contact__r.Role_in_organisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role in organization</label>
    <type>Text</type>
</CustomField>