force-app/main/default/objects/Ordered_Product__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <label>Shipping Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>