force-app/main/default/objects/Ordered_Product__c/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <formula>Order_Information__r.Shipping_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Name</label>
    <type>Text</type>
</CustomField>