force-app/main/default/objects/Ordered_Product__c/fields/Shipping_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Pincode__c</fullName>
    <formula>Order_Information__r.Shipping_Pincode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Pincode</label>
    <type>Text</type>
</CustomField>