force-app/main/default/objects/Ordered_Product__c/fields/SP1__c.field-meta.xml
<CustomField>
    <fullName>SP1__c</fullName>
    <label>SP1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>