force-app/main/default/objects/Ordered_Product__c/fields/Striked_Off_Price__c.field-meta.xml
<CustomField>
    <fullName>Striked_Off_Price__c</fullName>
    <label>Unit Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>