force-app/main/default/objects/Ordered_Product__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>