force-app/main/default/objects/Ordered_Product__c/fields/System_Product__c.field-meta.xml
<CustomField>
    <fullName>System_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ordered Products</relationshipLabel>
    <relationshipName>System_Products</relationshipName>
    <type>Lookup</type>
</CustomField>