force-app/main/default/objects/Ordered_Product__c/fields/Tax_Inclusive_Price__c.field-meta.xml
<CustomField>
    <fullName>Tax_Inclusive_Price__c</fullName>
    <label>Total Price(Inc Tax And Discount)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>