force-app/main/default/objects/Ordered_Product__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <label>Tax Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>