force-app/main/default/objects/Ordered_Product__c/fields/Tell_us_about_your_application_in_one_li__c.field-meta.xml
<CustomField>
    <fullName>Tell_us_about_your_application_in_one_li__c</fullName>
    <formula>Order_Information__r.Customer_Contact__r.Tell_us_about_your_application_in_one_li__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tell us about your application in one li</label>
    <type>Text</type>
</CustomField>