force-app/main/default/objects/Ordered_Product__c/fields/Total_DP__c.field-meta.xml
<CustomField>
    <fullName>Total_DP__c</fullName>
    <formula>VALUE(Quanitity__c) *DP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product NES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>