force-app/main/default/objects/Ordered_Product__c/fields/Total_new__c.field-meta.xml
<CustomField>
    <fullName>Total_new__c</fullName>
    <formula>Total_Price_Tax_And_Discount_Exc__c +  VALUE( Tax__c ) -  ( VALUE(Coupon_Discount__c ) +   VALUE(Bulk_Discount__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>