force-app/main/default/objects/Ordered_Product__c/fields/Total_paid__c.field-meta.xml
<CustomField>
    <fullName>Total_paid__c</fullName>
    <formula>Value(Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>