force-app/main/default/objects/Ordered_Product__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <inlineHelpText>Total Price on Product In Cart.</inlineHelpText>
    <label>Total Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>