force-app/main/default/objects/Ordered_Product__c/fields/Total_Price_Tax_And_Discount_Exc__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Tax_And_Discount_Exc__c</fullName>
    <formula>VALUE( Unit_Price__c )  * VALUE( Quanitity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price(Tax And Discount Exc )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>