force-app/main/default/objects/Ordered_Product__c/fields/Totalpart__c.field-meta.xml
<CustomField>
    <fullName>Totalpart__c</fullName>
    <label>TotalP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>