force-app/main/default/objects/Ordered_Product__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Logical CP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>