force-app/main/default/objects/Ordered_Product__c/fields/What_is_the_purpose_use__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_purpose_use__c</fullName>
    <formula>TEXT(Order_Information__r.Customer_Contact__r.What_is_the_purpose_use__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What is the purpose/use</label>
    <type>Text</type>
</CustomField>